--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,38 @@ yarn-error.log*
 # Local env files
 .env*.local
 .env
+.env.development
+.env.production
 
 # Vercel
 .vercel
+
+# Prisma
+prisma/.env
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Temporary files
+*.tmp
+.cache/
 
 # TypeScript
 *.tsbuildinfo
