--- a/package.json
+++ b/package.json
@@ -30,12 +30,16 @@
     "@prisma/client": "^6.17.0",
     "@tailwindcss/postcss": "^4.1.14",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.13.2",
+    "axios-cookiejar-support": "^6.0.4",
     "next": "^15.5.4",
     "postcss": "^8.5.6",
     "prisma": "^6.17.0",
+    "puppeteer": "^24.29.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.14",
+    "tough-cookie": "^5.1.2"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
