--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "axios-cookiejar-support": "^6.0.4",
     "formidable": "^3.5.4",
     "next": "^15.5.4",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.394",
     "postcss": "^8.5.6",
     "prisma": "^6.17.0",
     "puppeteer": "^24.29.1",
